# mos-6502

./: .gitignore  Cargo.toml  README.md
src/: cpu.rs  ins.rs  lib.rs  main.rs  mem.rs
src/asm/: lexer.rs  mod.rs
src/ins/: mod.rs
src/ins/inc_dec/: dec.rs  dex.rs  dey.rs  inc.rs  inx.rs  iny.rs  mod.rs
src/ins/jumps_calls/: jsr.rs  mod.rs
src/ins/load_store/: lda.rs  ldx.rs  ldy.rs  mod.rs  sta.rs  stx.rs  sty.rs
src/ins/logical/: and.rs  bit.rs  eor.rs  mod.rs  ora.rs
src/ins/reg_transfers/: mod.rs  tax.rs  tay.rs  txa.rs  tya.rs
src/ins/stack_ops/: mod.rs  pha.rs  php.rs  pla.rs  plp.rs  tsx.rs  txs.rs
src/ins/status_flags/: clc.rs  cld.rs  cli.rs  clv.rs  mod.rs  sec.rs  sed.rs  sei.rs
src/ins/sys_funcs/: brk.rs
