[package]
name = "mos-6502"
version = "0.1.0"
edition = "2021"

[lib]
name = "mos_6502"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.89"
ctor = "0.2.8"
deku = "0.18.1"
miette = { version = "7.2.0", features = ["fancy"] }
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
thiserror = "1.0.64"
